feat(.eslintrc.json): add global window and HTMLElement

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
     "rules": {
     },
     "globals": {
-        "document": true
+        "document": true,
+        "window": true,
+        "HTMLElement": true
     }
 }
