--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,6 @@
   },
   "permissions": ["activeTab"],
   "background": {
-    "service_worker": "background.js"
   },
   "action": {},
   "content_scripts": [
@@ -20,7 +19,7 @@
         "app.js",
         "charapiclient.js"
       ],
-      "css": ["styles.css"]
+      "css": ["style.css"]
     }
   ],
   "host_permissions": [
